Add created by for generated API Add created_by morph relation in user model On API request POST and PUT add created_by user id

--- a/packages/strapi-plugin-users-permissions/models/User.settings.json
+++ b/packages/strapi-plugin-users-permissions/models/User.settings.json
@@ -39,10 +39,10 @@
       "plugin": "users-permissions",
       "configurable": false
     },
-    "picture": {
-      "collection": "file",
-      "via": "related",
-      "plugin": "upload"
+    "owned": {
+      "collection": "*",
+      "filter": "field",
+      "configurable": false
     }
   },
   "collectionName": "users-permissions_user"
