--- a/packages/strapi-helper-plugin/package.json
+++ b/packages/strapi-helper-plugin/package.json
@@ -64,10 +64,10 @@
     "exports-loader": "^0.6.4",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
+    "file-loader": "^1.1.11",
     "history": "^4.6.3",
     "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^3.3.1",
     "immutable": "^3.8.1",
     "imports-loader": "^0.7.1",
@@ -110,10 +110,11 @@
     "showdown": "^1.8.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.5",
+    "webpack": "^4.0.0-beta.3",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
     "whatwg-fetch": "^2.0.3"
-  }
+  },
+  "devDependencies": {}
 }
