--- a/packages/strapi-helper-plugin/package.json
+++ b/packages/strapi-helper-plugin/package.json
@@ -112,6 +112,7 @@
     "url-loader": "^0.5.9",
     "webpack": "^4.0.0-beta.3",
     "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-cli": "^2.0.14",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
     "whatwg-fetch": "^2.0.3"
