--- a/packages/strapi-helper-plugin/package.json
+++ b/packages/strapi-helper-plugin/package.json
@@ -109,6 +109,7 @@
     "shelljs": "^0.7.8",
     "showdown": "^1.8.6",
     "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^0.5.9",
     "webpack": "^4.0.0-beta.3",
     "webpack-bundle-analyzer": "^2.9.0",
