--- a/packages/strapi-helper-plugin/package.json
+++ b/packages/strapi-helper-plugin/package.json
@@ -76,10 +76,12 @@
     "json-loader": "^0.5.7",
     "lodash": "^4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
+    "mini-css-extract-plugin": "^0.4.0",
     "mocha": "3.1.2",
     "moment": "^2.16.0",
     "node-sass": "^4.5.3",
     "null-loader": "^0.1.1",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
     "plop": "^1.8.0",
     "postcss-cssnext": "^2.11.0",
     "postcss-focus": "^2.0.0",
