--- a/packages/strapi-helper-plugin/package.json
+++ b/packages/strapi-helper-plugin/package.json
@@ -113,7 +113,7 @@
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^0.5.9",
-    "webpack": "^4.0.0-beta.3",
+    "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-middleware": "^1.12.0",
